--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
+  "name": "joel",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -8,15 +9,26 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.2",
+    "@react-navigation/stack": "^5.14.1",
     "expo": "~40.0.0",
+    "expo-barcode-scanner": "^10.0.0",
     "expo-image-picker": "^10.0.0",
     "expo-permissions": "^11.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-camera": "^3.42.0",
     "react-native-custom-qr-codes-expo": "^2.2.0",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-qrcode-scanner": "^1.5.3",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-svg": "^12.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
